webapp/client/public/css/components.css
/* TODO: Restructure CSS (base.css and components.css) for more clarity. */

/* BUTTONS */
.btn-primary, a.btn-primary{
    padding: 1rem 1.25rem calc(1rem - 4px) 1.25rem;

    font-size: var(--text-base);
    letter-spacing: var(--tracking-wide);
    text-decoration: none;
    color: var(--inverse-text-color);
    background: var(--link-color);
    display: inline-block;
    position: relative;
    border: none;
    border-radius: 0;
    border-bottom: 4px solid var(--link-color);
}

.btn-primary:not(:disabled):not(.disabled):active:focus {
    outline: none;
    box-shadow: none;
    background-color: var(--link-color);
}

.btn-primary:not(:disabled):not(.disabled):active, a.btn-primary:not(:disabled):not(.disabled):active{
    background: var(--link-color) !important;
    border:none !important;
    border-bottom: 4px solid var(--link-color) !important;
}



.btn-primary:hover, a.btn-primary:hover{
    background: var(--link-hover-color);
    border: none;
    border-bottom: 4px solid var(--link-hover-color);
}

.btn-primary:focus-visible, a.btn-primary:focus-visible{
    color: var(--focus-text-color);
    background: var(--focus-color);
    outline: none;
    box-shadow: none;
    border: 0;
    border-bottom: 4px solid var(--focus-border-color);
}

.btn-outline-primary, a.btn-outline-primary{
    padding: 1rem 1.25rem calc(1rem - 4px) 1.25rem; /* The calculation subtracts the border-bottom height. We need a border-bottom for the focus state. */

    font-weight: var(--font-bold);
    letter-spacing: var(--tracking-wide);
    text-decoration: none;
    color: var(--link-color);


    background: white;
    background-clip: padding-box;

    border: 0;
    border-radius: 0;
    border: 1px solid var(--border-color);
}

.btn-outline-primary:not(:disabled):not(.disabled):active, a.btn-outline-primary:not(:disabled):not(.disabled):active{
    color: var(--link-active-color);
    background-color: inherit;
    border: 1px solid var(--link-active-color);
}

.btn-outline-primary:hover, a.btn-outline-primary:hover {
    color: var(--link-hover-color);
    background: white;
    border: 1px solid var(--link-hover-color);
}

.btn-outline-primary:focus-visible, a.btn-outline-primary:focus-visible {
    color: var(--focus-color);
    outline:none;
    box-shadow: none;
    border: 1px solid var(--focus-border-color);
}

.btn-help {
    background: var(--link-color);
    color: var(--inverse-text-color) !important;
    text-decoration: none;
}

.btn-help:hover {
    background: var(--link-hover-color);
    color: var(--inverse-text-color) !important;
    text-decoration: none;
}

.btn-help:focus {
    box-shadow: none;
}

.btn-help:focus-visible {
    background: var(--focus-color);
    color: var(--text-color) !important;
    text-decoration: none;
}

.remove-button {
    cursor: pointer;
    margin-left: 5px;
    padding: .375rem .75rem;
    vertical-align: middle;
    text-decoration: none;
    color: var(--inverse-text-color) !important;
    background: var(--link-color);
    border: none;
}

.remove-button:hover{
    text-decoration: none;
    color: var(--inverse-text-color) !important;
    background: var(--link-hover-color);
}

.remove-button:focus-visible{
    text-decoration: none;
    color: var(--text-color) !important;
    background: var(--focus-color);
    box-shadow: none;
    outline: 0;
}


/* ACCORDION */
.accordion .card {
    border: 0;
    border-bottom: 1px solid var(--link-underline-color);
    border-radius: 0;
    background: inherit;
    padding-bottom: .75rem;
}

.accordion .card-header {
    padding: .75rem 0;
    text-align: left;
    color: var(--text-color);
    background: inherit;
    border: 0;
}

.accordion .card-header button {
    border: 0;
    background: inherit;
}

.accordion .card-header button:focus,
.accordion .card-header button:active {
    outline:none;
    box-shadow: none;
    border: 0;
}

.accordion .card-header button span {
    font-size: var(--text-medium);
    font-weight: var(--font-bold);

    display: inline;
}

.accordion .card-header:focus-within button:focus-visible span {
    color: var(--text-color);
    background: var(--focus-color);
    border-bottom: 4px solid var(--focus-border-color);
}

.accordion .card-header button:hover,
.accordion .card-header button:active{
    color: var(--link-hover-color);
}

.accordion .card-header:not(.collapsed) .control-show-more {
    /* We need to still show it to keep focus on the element */
    height: 1px;
    width: 1px;
    background-color: inherit;
    overflow: hidden;
    position: absolute;
}

.accordion .card-header.collapsed .control-show-less {
    /* We need to still show it to keep focus on the element */
    height: 1px;
    width: 1px;
    background-color: inherit;
    overflow: hidden;
    position: absolute;
}

/* DETAILS */
.details-card {
    display: block;
    width: 100%;
    overflow: auto;
}

.details-card .card {
    border: 0;
    border-radius: 0;
    background: inherit;
}

.details-card .card-header {
    border: 0;
    background: inherit;
    align-items: start;
    flex-wrap: nowrap;
}

.details-row {
    flex-wrap: nowrap;
    margin: 0;
}

.details-card .card-header span {
    color: var(--text-color);
    font-size: var(--text-medium);
    font-weight: var( --font-bold);
}

@media (max-width: 1024px) {
    .details-card .card-header span {
        font-size: var(--text-base);
    }
}

.details-card .card-header button {
    text-align: left;
    color: var(--text-color);
    background: inherit;
    border: 0;
    outline: none;
    box-shadow: none;
}

.details-card .card-header .collapsed span {
    color: var(--link-color);
}

.details-card .card-header .collapsed span:hover {
    color: var(--link-hover-color);
}

.details-card .card-header button:focus-visible span {
    color: var(--focus-text-color);
    background: var(--focus-color);
    outline:none;
    box-shadow: none;
    border: 0;
}
/* ... */

